@@ -17,6 +17,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23103: Reduced the memory consumption of IPv4Address and IPv6Address.
+
 - Issue #21793: BaseHTTPRequestHandler again logs response code as numeric,
   not as stringified enum.  Patch by Demian Brecht.
 
